[metadata]
name = gink
version = 0.0.20221231
author = Darin McGill
author_email = darin.mcgill@gmail.com
description = an eventually consistent database versioned database system
project_urls = 
    Bug Tracker = https://github.com/google/gink/issues
    repository = https://github.com/google/gink
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0

[options]
python_requires = >=3.9
