[package]
name = "gink"
version.workspace = true
edition.workspace = true

[dependencies]
prost = "0.11.5"
clap = { version = "4.0.32", features = ["derive"] }

log = "0.4.17"
env_logger = "0.10.0"

tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3.25"

[build-dependencies]
prost-build = "0.11.5"
